--- a/css/all.css
+++ b/css/all.css
@@ -872,6 +872,7 @@ readers do not read off random characters that represent icons */
 .fa-chess:before {
   content: "\f439"; }
 
+.fa-chess-bishop:before {
   content: "\f43a"; }
 
 .fa-chess-board:before {
